--- a/store-api/package.json
+++ b/store-api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "mongoose": "^5.11.10"
